--- a/components.json
+++ b/components.json
@@ -17,5 +17,43 @@
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
-  "iconLibrary": "lucide"
+  "iconLibrary": "lucide",
+  "theme": {
+    "colors": {
+      "primary": "#3B82F6",
+      "primaryForeground": "#ffffff",
+      "secondary": "#10B981",
+      "secondaryForeground": "#ffffff",
+      "accent": "#F59E0B",
+      "accentForeground": "#1F2937",
+      "background": "#F9FAFB",
+      "foreground": "#111827",
+      "muted": "#E5E7EB",
+      "mutedForeground": "#6B7280",
+      "popover": "#ffffff",
+      "popoverForeground": "#111827",
+      "card": "#ffffff",
+      "cardForeground": "#111827",
+      "border": "#E5E7EB",
+      "input": "#E5E7EB"
+    },
+    "darkColors": {
+      "primary": "#60A5FA",
+      "primaryForeground": "#111827",
+      "secondary": "#34D399",
+      "secondaryForeground": "#111827",
+      "accent": "#FBBF24",
+      "accentForeground": "#1F2937",
+      "background": "#111827",
+      "foreground": "#F9FAFB",
+      "muted": "#374151",
+      "mutedForeground": "#9CA3AF",
+      "popover": "#1F2937",
+      "popoverForeground": "#F9FAFB",
+      "card": "#1F2937",
+      "cardForeground": "#F9FAFB",
+      "border": "#374151",
+      "input": "#374151"
+    }
+  }
 }
