--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "date-fns": "^3.6.0",
     "exceljs": "^4.4.0",
     "firebase": "^11.8.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
